--- a/src/looper-page/looper-notification-bar.html
+++ b/src/looper-page/looper-notification-bar.html
@@ -58,7 +58,7 @@
       }
     </style>
     <iron-ajax auto url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/notification.json" handle-as="json" last-response="{{notification}}" debounce-duration="300"></iron-ajax>
-    <app-toolbar class$="[[notification.category]] [[show]]" div="aaaaa">
+    <app-toolbar class$="[[notification.category]] [[show]]">
       <div class="inner horizontal layout">
         <div class="innerLeft">
           <iron-icon icon="social:notifications-none"></iron-icon>
