fix footer issue

--- a/src/page-doc.html
+++ b/src/page-doc.html
@@ -19,7 +19,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     app-toolbar {
       color: black;
       background-color: var(--paper-grey-200);
-
     }
 
     paper-icon-button {
@@ -39,8 +38,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-icon-button noink icon="close"></paper-icon-button>
         </a>
       </app-toolbar>
-
-
       <div class="sections">
         <paper-card>
           <marked-element>
@@ -48,6 +45,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <script type="text/markdown" src="//raw.githubusercontent.com/Loopring/looper/master/README.md"></script>
           </marked-element>
         </paper-card>
+        <div class="footer-spacer"></div>
+        <looper-footer></looper-footer>
       </div>
     </looper-page>
   </template>
