--- a/src/page-market.html
+++ b/src/page-market.html
@@ -45,6 +45,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     paper-card {
       padding: 16px
     }
+
     paper-tabs {
       margin-bottom: 8px;
     }
@@ -83,6 +84,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </iron-pages>
           </div>
         </paper-card>
+        <div class="footer-spacer"></div>
+        <looper-footer></looper-footer>
       </div>
     </looper-page>
   </template>
