--- a/src/page-orders.html
+++ b/src/page-orders.html
@@ -27,6 +27,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <paper-card>
           <recent-orders></recent-orders>
         </paper-card>
+        <div class="footer-spacer"></div>
+        <looper-footer></looper-footer>
       </div>
     </looper-page>
   </template>
