--- a/src/page-ring.html
+++ b/src/page-ring.html
@@ -15,7 +15,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      :host {
       display: block;
     }
-
     </style>
     <looper-page>
       <simple-toolbar slot="secondary-toolbar" title="Ring" id="[[id]]" back-link="#/rings"></simple-toolbar>
@@ -32,6 +31,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-button>Some action</paper-button>
           </div>
         </paper-card>
+        <div class="footer-spacer"></div>
+        <looper-footer></looper-footer>
       </div>
     </looper-page>
   </template>
