--- a/src/page-rings.html
+++ b/src/page-rings.html
@@ -29,8 +29,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <a href="#/ring">Link to a Ring</a>
           </div>
         </paper-card>
+        <div class="footer-spacer"></div>
+        <looper-footer></looper-footer>
       </div>
-      <looper-footer></looper-footer>
     </looper-page>
   </template>
   <script>
