--- a/src/page-wallet.html
+++ b/src/page-wallet.html
@@ -34,8 +34,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <subpage-generate name="generate"></subpage-generate>
           <subpage-ready name="ready"></subpage-ready>
         </iron-pages>
+        <div class="footer-spacer"></div>
+        <looper-footer></looper-footer>
       </div>
-      <looper-footer></looper-footer>
     </looper-page>
   </template>
   <script>
