--- a/src/page-authorize.html
+++ b/src/page-authorize.html
@@ -32,6 +32,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </div>
         </paper-card>
       </div>
+      <div class="footer-spacer"></div>
+      <looper-footer></looper-footer>
     </looper-page>
   </template>
   <script>
