--- a/src/page-convert.html
+++ b/src/page-convert.html
@@ -14,70 +14,81 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
     <style include="shared-styles">
      :host {
-       display: block;
-     }
-     .container {
-       @apply(--layout-vertical);
-       @apply(--layout-center-justified);
-       margin: 50px;
-     }
-     .choseLine {
-       @apply(--layout-horizontal);
-       @apply(--layout-center-justified);
-       #width: 500px;
-       #background-color:mediumvioletred;
-     }
-     .side {
-       @apply(--layout-vertical);
-       width: 220px;
-     }
-     .lable {
-       color: rgb(158, 158, 158);
-       font-size: 12px;
-       text-align: left;
-       transform: scale(0.75) translate(0px, -28px);
-       transform-origin: left top 0px;
-       transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-       user-select: none;
-       width: 240px;
-     }
-     .tokenImage {
-       @apply(--layout-horizontal);
-       @apply(--layout-center-justified);
-     }
-     .tokenImage iron-icon {
-       width: 100px;
-       height: 100px;
-     }
-     .tokenName {
-       text-align:center;
-       font-family: Georgia, serif;
-       font-weight:bold;
-       font-size:1.3em;
-       color: #78909c;
-     }
-     .swap {
-       @apply(--layout-horizontal);
-       @apply(--layout-center);
-       padding-left: 30px;
-       padding-right: 30px;
-     }
-     .swap iron-icon {
-       width: 60px;
-       height: 60px;
-       fill: #ff6500;
-     }
-     .buttonLine {
-       @apply(--layout-horizontal);
-       @apply(--layout-center-justified);
-       margin-top: 50px;
-     }
-     paper-button {
-       font-family: 'Roboto', 'Noto', sans-serif;
-       font-weight: normal;
-       font-size: 14px;
-       -webkit-font-smoothing: antialiased;
-     }
+      display: block;
+    }
+
+    .container {
+      @apply(--layout-vertical);
+      @apply(--layout-center-justified);
+      margin: 50px;
+    }
+
+    .choseLine {
+      @apply(--layout-horizontal);
+      @apply(--layout-center-justified);
+      #width: 500px;
+      #background-color: mediumvioletred;
+    }
+
+    .side {
+      @apply(--layout-vertical);
+      width: 220px;
+    }
+
+    .lable {
+      color: rgb(158, 158, 158);
+      font-size: 12px;
+      text-align: left;
+      transform: scale(0.75) translate(0px, -28px);
+      transform-origin: left top 0px;
+      transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+      user-select: none;
+      width: 240px;
+    }
+
+    .tokenImage {
+      @apply(--layout-horizontal);
+      @apply(--layout-center-justified);
+    }
+
+    .tokenImage iron-icon {
+      width: 100px;
+      height: 100px;
+    }
+
+    .tokenName {
+      text-align: center;
+      font-family: Georgia, serif;
+      font-weight: bold;
+      font-size: 1.3em;
+      color: #78909c;
+    }
+
+    .swap {
+      @apply(--layout-horizontal);
+      @apply(--layout-center);
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+
+    .swap iron-icon {
+      width: 60px;
+      height: 60px;
+      fill: #ff6500;
+    }
+
+    .buttonLine {
+      @apply(--layout-horizontal);
+      @apply(--layout-center-justified);
+      margin-top: 50px;
+    }
+
+    paper-button {
+      font-family: 'Roboto', 'Noto', sans-serif;
+      font-weight: normal;
+      font-size: 14px;
+      -webkit-font-smoothing: antialiased;
+    }
     </style>
     <looper-page>
       <simple-toolbar slot="secondary-toolbar" title="Ether ERC20 Conversion" back-link="#/wallet"></simple-toolbar>
@@ -99,7 +110,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </div>
           </div>
           <div class="swap">
-            <a href="#" on-click="swap"><iron-icon icon="icons:swap-horiz"></iron-icon></a>
+            <a href="#" on-click="swap">
+              <iron-icon icon="icons:swap-horiz"></iron-icon>
+            </a>
           </div>
           <div class="side">
             <div>
@@ -110,7 +123,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <div>
               <div class="right">
                 <div class="tokenImage">
-                  <iron-icon src="[[rightTokenIcon]]"  id="rightTokenIcon"></iron-icon>
+                  <iron-icon src="[[rightTokenIcon]]" id="rightTokenIcon"></iron-icon>
                 </div>
                 <div class="tokenName" id="rightTokenName">[[rightTokenName]]</div>
               </div>
@@ -118,15 +131,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </div>
         </div>
         <div class="choseLine">
-            <paper-input always-float-label label="Amount to convert" id="leftInput">
-              <div slot="suffix">[[leftTokenName]]</div>
-            </paper-input>
+          <paper-input always-float-label label="Amount to convert" id="leftInput">
+            <div slot="suffix">[[leftTokenName]]</div>
+          </paper-input>
         </div>
         <div class="buttonLine">
           <paper-button raised on-click="signToSend">Generate Transaction</paper-button>
         </div>
+        <div class="footer-spacer"></div>
+        <looper-footer></looper-footer>
       </div>
-
     </looper-page>
   </template>
   <script>
@@ -135,8 +149,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     constructor() {
       super();
       this.configData = {
-          ETH: {name: 'ETH', icon: 'images/token/ether.png'},
-          WETH: {name: 'WETH', icon: 'images/token/ether_erc20.png'}
+        ETH: { name: 'ETH', icon: 'images/token/ether.png' },
+        WETH: { name: 'WETH', icon: 'images/token/ether_erc20.png' }
       }
     }
     ready() {
@@ -146,12 +160,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       this.rightTokenName = this.configData.WETH.name;
       this.rightTokenIcon = this.configData.WETH.icon;
     }
-    signToSend(){
-      var detail = {raw: "raw message"};
+    signToSend() {
+      var detail = { raw: "raw message" };
       this.dispatchEvent(new CustomEvent('signtosend', { bubbles: true, composed: true, detail: detail }));
     }
     swap() {
-      if('ETH' == this.leftTokenName){
+      if ('ETH' == this.leftTokenName) {
         this.leftTokenName = this.configData.WETH.name;
         this.leftTokenIcon = this.configData.WETH.icon;
         this.rightTokenName = this.configData.ETH.name;
