--- a/src/page-fill.html
+++ b/src/page-fill.html
@@ -22,6 +22,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <paper-card>
           <recent-fills></recent-fills>
         </paper-card>
+        <div class="footer-spacer"></div>
+        <looper-footer></looper-footer>
       </div>
     </looper-page>
   </template>
