--- a/src/page-order.html
+++ b/src/page-order.html
@@ -31,14 +31,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-button>Some action</paper-button>
           </div>
         </paper-card>
+        <div class="footer-spacer"></div>
+        <looper-footer></looper-footer>
       </div>
     </looper-page>
   </template>
   <script>
   class PageOrder extends Polymer.Element {
-    static get is() { 
-      return 'page-order'; }
-          static get properties() {
+    static get is() {
+      return 'page-order';
+    }
+    static get properties() {
       return {
         id: String
       };
