--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -52,6 +52,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       background-color: transparent;
     }
 
+    .footer-spacer {
+      @apply --layout-flex;
+      height: 48px;
+      background-color: red;
+    }
     iron-input input {
       height: 28px;
       font-size: 16px;
