--- a/src/my-app.html
+++ b/src/my-app.html
@@ -46,11 +46,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link ref="import" href="../bower_components/polymer/lib/elements/dom-if.html">
 <link ref="import" href="../bower_components/polymer/lib/elements/dom-repeat.html">
-<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-grid.html">
-<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-button.html">
-<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-checkbox.html">
-<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-text-field.html">
-<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-date-picker.html">
+<link rel="import" href="../bower_components/vaadin-valo-theme/vaadin-grid.html">
+<link rel="import" href="../bower_components/vaadin-valo-theme/vaadin-button.html">
+<link rel="import" href="../bower_components/vaadin-valo-theme/vaadin-checkbox.html">
+<link rel="import" href="../bower_components/vaadin-valo-theme/vaadin-text-field.html">
+<link rel="import" href="../bower_components/vaadin-valo-theme/vaadin-date-picker.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid.html">
 <link rel="import" href="../bower_components/vaadin-button/vaadin-button.html">
 <link rel="import" href="../bower_components/vaadin-progress-bar/vaadin-progress-bar.html">
@@ -60,6 +60,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/vaadin-combo-box/vaadin-combo-box.html">
 <link rel="import" href="../bower_components/vaadin-date-picker/vaadin-date-picker.html">
 <link rel="import" href="../bower_components/global-variable/global-variable.html">
+<link rel="import" href="../bower_components/scary-cookie-consent/scary-cookie-consent.html">
 <link rel="import" href="my-icons.html">
 <link rel="import" href="looper-page/looper-toolbar.html">
 <link rel="import" href="looper-page/looper-notification-bar.html">
@@ -83,6 +84,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="lazy-import" href="page-settings">
 <link rel="lazy-import" href="page-doc.html">
 <link rel="lazy-import" href="page-404.html">
+<link rel="lazy-import" href="page-dev.html">
 <dom-module id="my-app">
   <template>
     <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
@@ -209,6 +211,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <page-transfer name="transfer"></page-transfer>
           <page-settings name="settings"></page-settings>
           <page-doc name="doc" markdown={{pageId}}></page-doc>
+          <page-dev name="dev"></page-dev>
           <page-404 name="404"></page-404>
         </iron-pages>
       </app-header-layout>
