--- a/src/market/recent-fills.html
+++ b/src/market/recent-fills.html
@@ -1,58 +1,97 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <!-- <link rel="import" href="../../bower_components/paper-button/paper-button.html"> -->
 <dom-module id="recent-fills" fit>
-  <template>
-    <style include="shared-styles">
-     :host {
-      display: block;
-    }
-    </style>
-    <iron-ajax auto url="//raw.githubusercontent.com/Loopring/mock-relay-data/master/orders.json" handle-as="json" last-response="{{resp}}"></iron-ajax>
-    <!-- The array is set as the <vaadin-grid>'s "items" property -->
-    <vaadin-grid aria-label="Basic Binding Example" items="[[resp.result.data]]">
-      <vaadin-grid-column>
-        <template class="header">HASH</template>
-        <template>[[item.orginalOrder.hash]]</template>
-      </vaadin-grid-column>
-      <vaadin-grid-column>
-        <template class="header">ADDRESS</template>
-        <template>[[item.orginalOrder.address]]</template>
-      </vaadin-grid-column>
-      <vaadin-grid-column width="50px">
-        <template class="header">AMOUNT (LRC)</template>
-        <template>[[item.orginalOrder.amountS]]</template>
-      </vaadin-grid-column>
-      <vaadin-grid-column width="50px">
-        <template class="header">PRICE (LRC/ETH)</template>
-        <template>[[item.orginalOrder.amountB]]</template>
-      </vaadin-grid-column>
-      <vaadin-grid-column width="50px">
-        <template class="header">SIZE (ETH)</template>
-        <template>[[item.orginalOrder.amountB]]</template>
-      </vaadin-grid-column>
-      <vaadin-grid-column width="50px">
-        <template class="header">TIMESTAMP</template>
-        <template>[[item.orginalOrder.timestamp]]</template>
-      </vaadin-grid-column>
-      <vaadin-grid-column width="20px">
-        <template class="header">STATUS</template>
-        <template>
-          <iron-icon icon="menu"></iron-icon>
-        </template>
-      </vaadin-grid-column>
-    </vaadin-grid>
-  </template>
-  <script>
-  class RecentFills extends Polymer.Element {
-    static get is() { return 'recent-fills'; }
+    <template>
+        <style include="shared-styles">
+            :host {
+                display: block;
+            }
+        </style>
+        <iron-ajax auto url="//raw.githubusercontent.com/Loopring/mock-relay-data/master/orderFills.json"
+                   handle-as="json" last-response="{{resp}}"></iron-ajax>
+        <!-- The array is set as the <vaadin-grid>'s "items" property -->
+        <vaadin-grid aria-label="Basic Binding Example" items="[[resp.result.data]]">
+            <vaadin-grid-column width="60px">
+                <template class="header">Time</template>
+                <template>[[traTimeStamp(item.ts)]]</template>
+            </vaadin-grid-column>
+            <vaadin-grid-column width="20px">
+            <template class="header">Type</template>
+            <template ><span style$ ="color:[[typeStyle(item.isBuy)]]"> [[getType(item.isBuy)]]</span></template>
+        </vaadin-grid-column>
+            <vaadin-grid-column width="40px" >
+                <template class="header">Amount (LRC)</template>
+                <template>[[item.fillAmountS]]</template>
+            </vaadin-grid-column>
+            <vaadin-grid-column width="40px">
+                <template class="header">Price (LRC/ETH)</template>
+                <template>[[calPrice(item.fillAmountB,item.fillAmountS)]]</template>
+            </vaadin-grid-column>
+            <vaadin-grid-column width="40px">
+                <template class="header">Size (ETH)</template>
+                <template>[[item.fillAmountB]]</template>
+            </vaadin-grid-column>
+            <vaadin-grid-column  width="200px">
+                <template class="header">Hash</template>
+                <template>[[item.txHash]]</template>
+            </vaadin-grid-column>
+            <vaadin-grid-column width="20px">
+                <template class="header">Status</template>
+                <template>
+                    <iron-icon icon="menu"></iron-icon>
+                </template>
+            </vaadin-grid-column>
+        </vaadin-grid>
+    </template>
+    <script>
+        class RecentFills extends Polymer.Element {
+            static get is() {
+                return 'recent-fills';
+            }
 
-    static get properties() {
-      return {
+            static get properties() {
+                return {};
+            }
 
-      };
-    }
-  }
+            calPrice(b, s) {
+                if (b && s && s !== 0) {
+                    return (b / s);
+                }
+                return 'Error';
+            }
 
-  window.customElements.define(RecentFills.is, RecentFills);
-  </script>
+            traTimeStamp(ts) {
+                if (ts) {
+                    const date = new Date(ts * 1000);
+                    return (
+                        date.getFullYear() +
+                        '-' +
+                        (date.getMonth() < 9
+                            ? '0' + (date.getMonth() + 1)
+                            : date.getMonth() + 1) +
+                        '-' +
+                        (date.getDate() < 10 ? '0' + date.getDate() : date.getDate()) +
+                        ' ' +
+                        (date.getHours() < 10 ? '0' + date.getHours() : date.getHours()) +
+                        ':' +
+                        (date.getMinutes() < 10 ? '0' + date.getMinutes() : date.getMinutes()) +
+                        ':' +
+                        (date.getSeconds() < 10 ? '0' + date.getSeconds() : date.getSeconds())
+                    );
+                }
+                return 'Error';
+            }
+
+            typeStyle(isBuy) {
+
+               return isBuy ? 'var(--paper-green-500)' : 'var(--paper-red-500)';
+            }
+
+            getType(isBuy){
+                return isBuy ? 'Buy' : 'Sell';
+            }
+        }
+
+        window.customElements.define(RecentFills.is, RecentFills);
+    </script>
 </dom-module>
