add relay selection in settings page (#21)
* remove old pages

* add relay selection

--- a/src/looper-page/looper-footer.html
+++ b/src/looper-page/looper-footer.html
@@ -21,7 +21,7 @@
     }
 
     .social a:hover {
-      color: var(--google-green-500);
+      color: var(--google-blue-500);
     }
 
     .social {
@@ -45,7 +45,7 @@
     }
 
     .menus a:hover {
-      color: var(--google-green-500);
+      color: var(--google-blue-500);
     }
 
     .copyright {
