--- a/src/looper-page/signtosend-dialog.html
+++ b/src/looper-page/signtosend-dialog.html
@@ -24,8 +24,8 @@
     }
 
     .signed.wrapper {
-      background-color: var(--google-green-700);
-      background-color: var(--google-green-700);
+      background-color: var(--google-blue-700);
+      background-color: var(--google-blue-700);
     }
 
     .title {
