--- a/src/looper-page/simple-toolbar.html
+++ b/src/looper-page/simple-toolbar.html
@@ -13,7 +13,7 @@
 
     app-toolbar {
       color: #fff;
-      background-color: var(--google-green-500);
+      background-color: var(--google-blue-500);
     }
 
     paper-icon-button {
