--- a/src/my-app.html
+++ b/src/my-app.html
@@ -92,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      :host {
       --app-primary-color: #4285f4;
       --app-secondary-color: black;
-      --paper-spinner-color: var(--google-green-500);
+      --paper-spinner-color: var(--google-blue-500);
       --paper-spinner-stroke-width: 1px;
       display: block;
     }
@@ -140,7 +140,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     #loading {
       padding-top: 30vh;
-      color: var(--google-green-500);
+      color: var(--google-blue-500);
       font-weight: 200;
     }
 
@@ -182,7 +182,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </app-drawer>
       <app-header-layout has-scrolling-region fullbleed>
         <app-header fixed slot="header">
-          <looper-notification-bar id="notification"></looper-notification-bar>
+          <!-- <looper-notification-bar id="notification"></looper-notification-bar> -->
           <app-toolbar>
             <!-- <paper-icon-button icon="menu" drawer-toggle></paper-icon-button> -->
             <div spacer></div>
