--- a/src/page-market.html
+++ b/src/page-market.html
@@ -29,11 +29,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: rgba(0, 0, 0, .54);
       }
 
-      --paper-tabs-selection-bar-color: var(--google-green-500);
+      --paper-tabs-selection-bar-color: var(--google-blue-500);
       --paper-tab-ink: transparent;
       --paper-tab-content: {
-        /*background-color: var(--google-green-500);*/
-        /*color: var(--google-green-500);*/
+        /*background-color: var(--google-blue-500);*/
+        /*color: var(--google-blue-500);*/
       }
 
       --paper-tab-content-unselected: {
