--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -19,11 +19,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     a {
-      color: var(--google-green-500);
+      color: var(--google-blue-500);
     }
 
     a:hover {
-      color: var(--google-green-700);
+      color: var(--google-blue-700);
     }
 
     a[styleless] {
@@ -41,9 +41,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       @apply --layout-flex;
       width: 100%;
       font-weight: 400;
+      padding-top: 32px;
     }
 
-    .sections > paper-card {
+    .sections>paper-card {
       width: 100%;
       margin: 16px 0 8px 0;
     }
@@ -55,8 +56,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     .footer-spacer {
       @apply --layout-flex;
       height: 48px;
-      background-color: red;
     }
+
     iron-input input {
       height: 28px;
       font-size: 16px;
@@ -69,7 +70,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     iron-input input:focus {
       padding-bottom: 0;
-      border-bottom: solid 2px var(--google-green-500);
+      border-bottom: solid 2px var(--google-blue-500);
     }
 
 
@@ -94,12 +95,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     paper-button[primary] {
-      background-color: var(--google-green-500);
+      background-color: var(--google-blue-500);
       color: white;
     }
 
     paper-button[primary]:hover {
-      background-color: var(--google-green-700);
+      background-color: var(--google-blue-700);
     }
 
     paper-button {
@@ -112,6 +113,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color: rgba(0, 0, 0, 0.78);
       border: none;
       padding-top: 16px;
+    }
+
+    vaadin-grid-table:focus {
+      outline: none;
     }
 
     vaadin-grid iron-icon {
