--- a/src/wallet/subpage-default.html
+++ b/src/wallet/subpage-default.html
@@ -26,11 +26,11 @@
     .card-actions paper-button {
       min-width: 360px;
       /*margin:8px 0 8px 0;*/
-      /*color: var(--google-green-700);*/
+      /*color: var(--google-blue-700);*/
     }
 
     .card-actions paper-button:hover {
-      color: var(--google-green-700);
+      color: var(--google-blue-700);
     }
     </style>
     <div class="sections">
